Change font and fix mobile layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Nanum Gothic Coding:ital,wght@0,400;0,700;1,400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
 /*
     Section: Animations
@@ -134,7 +135,7 @@ body {
 small,
 span,
 h3 {
-    font-family: "Nanum Gothic Coding", "Inconsolata", monospace;
+    font-family: "Rubik", sans-serif;
 }
 
 .btn-primary {
@@ -217,7 +218,7 @@ h3 {
 }
 
 .body-heading {
-    font-family: "Nanum Gothic Coding", monospace;
+    font-family: "Rubik", sans-serif;
     font-weight: bolder;
     user-select: none;
     text-shadow: 3px 3px 2px #282828;
@@ -273,7 +274,7 @@ h3 {
     margin-bottom: .8em;
     margin-right: .8em;
     z-index: 0;
-    font-family: "Nanum Gothic Coding", "Inconsolata", monospace !important;
+    font-family: "Rubik", sans-serif;
     flex: 1 0 25%; /* This will make each task take up 25% of the container width */
 }
 
@@ -288,7 +289,7 @@ h3 {
 
 .task:hover {
     box-shadow: 0px 5px 14px #00000056;
-    transform: translateY(-.05em);
+/*    transform: translateY(-.05em);*/
 }
 
 .nav-title {
@@ -321,8 +322,7 @@ h3 {
     background-color: var(--accent-primary-semi-transparent);
     color: var(--text-color);
     backdrop-filter: blur(10px);
-    font-family: "Nanum Gothic Coding", "Inconsolata", monospace !important;
-    font-weight: bolder !important;
+    font-family: "Rubik", sans-serif !important;
     padding: .5em 1em .5em 1em;
     border: none;
     outline: none;
@@ -342,7 +342,7 @@ h3 {
 }
 
 .popover-body {
-    font-family: "Nanum Gothic Coding", "Inconsolata", monospace !important;
+    font-family: "Rubik", sans-serif;
     font-size: small;
     font-weight: bold;
     line-height: 1.2em;
@@ -355,7 +355,7 @@ h3 {
     border-radius: .5em;
     box-shadow: 0px 4px 7px #00000047;
     z-index: 10;
-    font-family: "Nanum Gothic Coding", "Inconsolata", monospace !important;
+    font-family: "Rubik", sans-serif !important;
     position: fixed;
     min-width: 50em;
 }
@@ -425,13 +425,13 @@ h3 {
 }
 
 .dropdown-item {
-    font-family: "Nanum Gothic Coding", "Inconsolata", monospace !important;
+  font-family: "Rubik", sans-serif;
 }
 
 .navbar-nav>li,
 .nav-search,
 .nav-search::placeholder {
-    font-family: "Nanum Gothic Coding", "Inconsolata", monospace !important;
+    font-family: "Rubik", sans-serif;
     /* font-weight: bolder !important; */
 }
 
@@ -582,5 +582,35 @@ h3 {
 
     .task {
         flex: 1 0 50%; /* This will make each task take up 50% of the container width on smaller screens */
+    }
+
+    .card-bottom {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .card-bottom .card-btn-container {
+        width: 100%;
+        margin-top: .5em;
+        justify-content: center;
+    }
+
+    .card-bottom .card-btn-container .task-btn {
+        flex: 1;
+    }
+
+    .card-bottom .card-btn-container .task-btn-done {
+        margin-left: 0em;
+    }
+
+    .card-bottom .task-date {
+        width: 100%;
+        text-align: left;
+    }
+
+    .floating-menu {
+        right: 1em;
+        bottom: 1em;
     }
 }
